--- a/postencontrado.html
+++ b/postencontrado.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body >
+<body style="font-family: 'Inter';">
     <div style="display: flex;flex-direction:column;width: 250px;height: 220px;border:solid 1px;border-radius: 4px ;border-color: #E5E5E5; padding: 0;">
         <div style="width: 100%;height: 60%;border-radius:4px 4px 0px 0px;margin:0;"><img style="object-fit: cover;width: 100%;height: 100%;border-radius:4px 4px 0px 0px;" src="imagenes/perro.jpg"></div>
         <div style="width: 100%;height: 40%;">
