--- a/homeInvitado.html
+++ b/homeInvitado.html
@@ -19,7 +19,7 @@
         </div>
 
         <nav>
-            <a href="#">¿Nuevo en FindMyPet?</a>
+            <a href="#new-FindMyPet">¿Nuevo en FindMyPet?</a>
             <img src="http://localhost/FindMyPet/imagenes/homeInvitado/Line.png" alt="Línea Separadora" class="line">
             <a href="http://localhost/FindMyPet/registro.php">Registrarse</a>
             <a href="#" class="Login">Iniciar Sesión</a>
@@ -63,14 +63,14 @@
         </div>
     </div>
 
-    <div class="new-FindMyPet">
+    <div class="new-FindMyPet" id="new-FindMyPet">
         <div class="new-images">
             <div class="image1">
-
+                <img src="http://localhost/FindMyPet/imagenes/homeInvitado/NewFindMyPet" alt="Imagen New FIndMyPet">
             </div>
 
             <div class="image2">
-                <img src="http://localhost/FindMyPet/imagenes/homeInvitado/Cat.svg" alt="Gato Home Home Invitado">
+                <img src="http://localhost/FindMyPet/imagenes/homeInvitado/Cat.svg" alt="Gato Home Invitado">
             </div>
         </div>
 
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="new-content-button">
-                    <a href="http://localhost/FindMyPet/registro.php">Registrarme</a>
+                    <a href="http://localhost/FindMyPet/registro.php" class="new-content-button-ref">Registrarme</a>
                 </div>
             </div>
         </div>
@@ -111,38 +111,38 @@
                 <ul class="direct-access-list">
                     <li class="direct-access-item">
                         <div class="direct-access-item-tex">
-                            Iniciar Sesión
+                            <a href="">Iniciar Sesión</a> 
                         </div>
 
                         <div class="direct-access-item-icon">
-                            <img src="/imagenes/homeInvitado/user.svg" alt="Icono Usuario">
+                            <img src="http://localhost/FindMyPet/imagenes/homeInvitado/user.svg" alt="Icono Usuario">
                         </div>
                     </li>
 
                     <li class="direct-access-item">
                         <div class="direct-access-item-tex">
-                            Registrarse
+                            <a href="http://localhost/FindMyPet/registro.php">Registrarse</a>
                         </div>
 
                         <div class="direct-access-item-icon">
-                            <img src="/imagenes/homeInvitado/box-archive.svg" alt="Icono Registro">
+                            <img src="http://localhost/FindMyPet/imagenes/homeInvitado/box-archive.svg" alt="Icono Registro">
                         </div>
                     </li>
 
                     <li class="direct-access-item">
                         <div class="direct-access-item-tex">
-                            ¿Nuevo en FindMyPet?
+                            <a href="#new-FindMyPet">¿Nuevo en FindMyPet?</a>
                         </div>
 
                         <div class="direct-access-item-icon">
-                            <img src="/imagenes/homeInvitado/question.svg" alt="Icono Pregunta">
+                            <img src="http://localhost/FindMyPet/imagenes/homeInvitado/question.svg" alt="Icono Pregunta">
                         </div>
                     </li>
                 </ul>
             </div>
 
             <div class="footer-logo">
-                <img src="/imagenes/homeInvitado/FindMyPet.svg" alt="Logo Footer">
+                <img src="http://localhost/FindMyPet/imagenes/homeInvitado/FindMyPet.svg" alt="Logo Footer">
             </div>
 
             <div class="contact-us">
@@ -154,40 +154,38 @@
                     C/Luis Doreste Silva, 36. 53004. las Palmas de gran canaria. España.
                 </div>
 
-                <div class="contact-us-ul">
-                    <ul class="contact-us-list">
-                        <li class="contact-us-list-item">
-                            <div class="contact-us-list-item-icon">
-                                <img src="/imagenes/homeInvitado/phone.svg" alt="Icono Teléfono">
-                            </div>
+                <ul class="contact-us-list">
+                    <li class="contact-us-list-item">
+                        <div class="contact-us-list-item-icon">
+                            <img src="http://localhost/FindMyPet/imagenes/homeInvitado/phone.svg" alt="Icono Teléfono">
+                        </div>
 
-                            <div class="contact-us-list-item-text">
-                                +34 694 43 85 72
-                            </div>
-                        </li>
+                        <div class="contact-us-list-item-text">
+                            +34 694 43 85 72
+                        </div>
+                    </li>
 
-                        <li class="contact-us-list-item">
-                            <div class="contact-us-list-item-icon">
-                                <img src="/imagenes/homeInvitado/mail.svg" alt="Icono Correo">
-                            </div>
+                    <li class="contact-us-list-item">
+                        <div class="contact-us-list-item-icon">
+                            <img src="http://localhost/FindMyPet/imagenes/homeInvitado/mail.svg" alt="Icono Correo">
+                        </div>
 
-                            <div class="contact-us-list-item-text">
-                                findmypet@animales.org
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+                        <div class="contact-us-list-item-text">
+                            findmypet@animales.org
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
 
         <div class="bottom-footer">
             <div class="logo-copy">
                 <div class="logo-footer">
-                    <img src="/imagenes/FindMyPet.svg" alt="Logo Footer Bottom">
+                    <img src="http://localhost/FindMyPet/imagenes/homeInvitado/FindMyPet-Small-Footer.svg" alt="Logo Footer Bottom">
                 </div>
 
                 <div class="copyright-footer">
-                    © FindMyPets  2022 - Todos los derechos resservdados
+                    © FindMyPets  2022 - Todos los derechos reservados
                 </div>
             </div>
 
@@ -197,11 +195,11 @@
                 </div>
 
                 <div class="social-media-icons">
-                    <img src="/imagenes/homeInvitado/twitter.svg" alt="Twitter Logo">
-                    <img src="/imagenes/homeInvitado/facebook.svg" alt="Facebook Logo">
-                    <img src="/imagenes/homeInvitado/linkedin.svg" alt="Linkedin Logo">
-                    <img src="/imagenes/homeInvitado/instagram.svg" alt="Instagram Logo">
-                    <img src="/imagenes/homeInvitado/pinterest.svg" alt="Pinterest Logo">
+                    <img src="http://localhost/FindMyPet/imagenes/homeInvitado/twitter.svg" alt="Twitter Logo">
+                    <img src="http://localhost/FindMyPet/imagenes/homeInvitado/facebook.svg" alt="Facebook Logo">
+                    <img src="http://localhost/FindMyPet/imagenes/homeInvitado/linkedin.svg" alt="Linkedin Logo">
+                    <img src="http://localhost/FindMyPet/imagenes/homeInvitado/instagram.svg" alt="Instagram Logo">
+                    <img src="http://localhost/FindMyPet/imagenes/homeInvitado/pinterest.svg" alt="Pinterest Logo">
                 </div>
             </div>
         </div>
