--- a/post.html
+++ b/post.html
@@ -1,4 +1,4 @@
-<div  class = "tarjeta" style="display: flex;flex-direction:column;width: 250px;height: 230px;border:solid 1px;border-radius: 4px ;border-color: #E5E5E5; padding: 0;">
+<div  class = "tarjeta" style="font-family:'Inter';display: flex;flex-direction:column;width: 250px;height: 230px;border:solid 1px;border-radius: 4px ;border-color: #E5E5E5; padding: 0;">
   <div class="front">
     <div style="width: 100%;height: 60%;border-radius:4px 4px 0px 0px;margin:0;"><img style="object-fit: cover;width: 100%;height: 100%;border-radius:4px 4px 0px 0px;" src="[FOTOANIMAL]"></div>
     <div style="width: 100%;height: 40%;">
