design changes to homeUsuarioWeb

--- a/post.html
+++ b/post.html
@@ -35,6 +35,9 @@
 </div>
 
 <style>
+  .tarjeta{
+    margin: 5px;
+  }
   .tarjeta:hover .front {
     display:none;
   }
@@ -45,5 +48,6 @@
   .tarjeta:hover .back{
     display:flex!important;
   }
+
 
 </style>
