cambios en form post

--- a/formPostEncontrado.html
+++ b/formPostEncontrado.html
@@ -163,9 +163,12 @@ body p{
 
 .f3{
     width: 88%;
-    height: 16rem;
+    height: 10rem;
     text-align: center;
-    margin: auto;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .f4{ 
@@ -267,7 +270,7 @@ body p{
                 </div>
             </div>
             <div   style="border:1px solid #EFEFEF;text-align: center" class="f3">
-                <input style="margin-top: 10%;"  type="file" multiple name="fotos" value="">
+                <input style="margin-top: 6%;"  type="file" multiple name="fotos" value="">
             </div>
             <div class="f4">
                 <button>Publicar</button>
