interfaz de form post encontrado terminada

--- a/formPostEncontrado.html
+++ b/formPostEncontrado.html
@@ -56,8 +56,8 @@ body p{
 }
 
 .datos select{
-    height: 1.7rem;
-    width: 80%;
+    height: 1.8rem;
+    width: 81%;
     border-radius: 4px;
     border: none;
     background-color: #EFEFEF;
@@ -245,27 +245,9 @@ body p{
                 
                 </div>
                 <div class="c3">
-                    <p style = "margin-left: -10%;">Fecha</p>
-                    <div style = "margin-left: -10%;" class="fechas">
-                        <div class="day">
-                            <p>Día</p>
-                            <select name="daySelect" id="">
-                                <option>10</option>
-                            </select>
-
-                        </div>
-                        <div class="month">
-                            <p style="margin-left:-7%">Mes</p>
-                            <select name="monthSelect" id="">
-                                <option>10</option>
-                            </select>
-                        </div>
-                        <div class="year">
-                            <p style="margin-left:-13%">Año</p>
-                            <select name="yearSelect" id="">
-                                <option>10</option>
-                            </select>
-                        </div>
+                    <p >Fecha</p>
+                    <div  class="fechas">
+                        <input class="inp" type="date">
                     </div>
                 </div>
             </div>
