--- a/componentes/post.html
+++ b/componentes/post.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
 <div  class = "tarjeta" style="font-family:'Inter';display: flex;flex-direction:column;width: 250px;height: 230px;border:solid 1px;border-radius: 4px ;border-color: #E5E5E5; padding: 0;">
   <div class="front">
     <img style="object-fit: cover;width: 100%;height:135px;border-radius:4px 4px 0px 0px;margin:0;" src="[FOTOANIMAL]">
