solucionado problema de lista de post y interfaz de visualizacion de post

--- a/componentes/post.html
+++ b/componentes/post.html
@@ -7,8 +7,11 @@
         <p> [UBICACION] </p>
         <div style="display: flex;flex-direction:row;">
 
-          <div style="width: 50%;">
-            <p style="font-size: 10px;">[FECHA]</p>
+          <div style="width: 68%;">
+            <p style="font-size: 13px;">[FECHA]</p>
+          </div>
+          <div>
+            <p style="font-size: 13px;margin-left:110%">[HORA]</p>
           </div>
         </div>
       </div>
