--- a/componentes/postBack.html
+++ b/componentes/postBack.html
@@ -4,7 +4,7 @@
     <img style="object-fit: cover;width: 100%;height:135px;border-radius:4px 4px 0px 0px;margin:0;" src="[FOTOANIMAL]">
     <div style="width: 100%;height: 40%;">
       <div style="width: 100%;height: 40%;padding: 2%;">
-        <div style="float: left;margin-right: 20%;"><p>[NOMBRE]</p></div>
+        <div style="float: left;margin-right: 20%;"><p>[NOMBREANIMAL]</p></div>
         <div style=""><p>[UBICACION]</p></div>
         <div style="display: flex;flex-direction:row;">
 
