--- a/componentes/postBack.html
+++ b/componentes/postBack.html
@@ -4,15 +4,16 @@
     <img style="object-fit: cover;width: 100%;height:135px;border-radius:4px 4px 0px 0px;margin:0;" src="[FOTOANIMAL]">
     <div style="width: 100%;height: 40%;">
       <div style="width: 100%;height: 40%;padding: 2%;">
-        <div style="float: left;margin-right: 20%;"><p>[NOMBREANIMAL]</p></div>
-        <div style=""><p>[UBICACION]</p></div>
+        <div style="float: left;margin-right: 10%;"><p>[NOMBREANIMAL]</p></div>
+        <div><p style="font-size: 11px;padding-top: 3.2%;">[UBICACION]</p></div>
+        <br>
         <div style="display: flex;flex-direction:row;">
 
           <div style="width: 68%;">
-            <p style="font-size: 13px;">[FECHA]</p>
+            <p style="font-size: 13px;margin-top: 3%;">[FECHA]</p>
           </div>
           <div>
-            <p style="font-size: 13px;margin-left:110%">[HORA]</p>
+            <p style="font-size: 13px;margin-left:110%;margin-top: 3%;">[HORA]</p>
           </div>
         </div>
       </div>
