--- a/componentes/postAdmin.html
+++ b/componentes/postAdmin.html
@@ -29,7 +29,7 @@
     </div>
     <div style="height: 30%;width: 100%;display: flex;flex-direction: row;flex-wrap:wrap;text-align:  center;justify-content: center;">
       <div style="width: 100%;">
-        <a class="boton" href="eliminarEncontrado.php"><button style = "cursor:pointer;margin-top: 5vh;border:solid 0.1vw;border-radius:15px;width: 160px;background-color: #FCDA68;padding: 0.2vw;color: #ffffff;font-family: 'Inter';font-size: 12px;" name="Logear" type="button" value="Iniciar sesión">Eliminar</button></a>
+        <a class="boton" href="eliminarEncontrado.php?id=[ID]&idfoto=[IDFOTO]"><button style = "cursor:pointer;margin-top: 5vh;border:solid 0.1vw;border-radius:15px;width: 160px;background-color: #FCDA68;padding: 0.2vw;color: #ffffff;font-family: 'Inter';font-size: 12px;" name="Logear" type="button" value="Iniciar sesión">Eliminar</button></a>
       </div>
       <div  style="width: 100%;"></div>
       
@@ -37,7 +37,7 @@
 
   </div>
 </div>
-
+<p style="display:none;">[ID]</p>
 <style>
   .tarjeta{
     margin: 5px;
