--- a/componentes/post.html
+++ b/componentes/post.html
@@ -32,12 +32,14 @@
         <a class="boton" href="denunciar.php"><button style = "cursor:pointer;margin-bottom: 2vh;border:solid 0.1vw;border-radius:15px;width: 160px;background-color: #FCDA68;padding: 0.2vw;color: #ffffff;font-family: 'Inter';font-size: 12px;" name="Logear" type="button" value="Iniciar sesión">Contactar</button></a>
       </div>
       <div  style="width: 100%;"></div>
-      <a class="boton" href="denunciar.php"><button style = "cursor:pointer;margin-bottom: 2vh;border:solid 0.1vw;border-radius:15px;border-color:#FCDA68;width: 160px;background-color: #ffffff;padding: 0.2vw;color: #2D2B40;font-family: 'Inter';font-size:12px;" name="Logear" type="button" value="Iniciar sesión">Denunciar post</button></a>
+      <a class="boton" href="denunciar.php?idpost=[IDPOST]&idusuario=[IDUSUARIO]&tipopost=0"><button style = "cursor:pointer;margin-bottom: 2vh;border:solid 0.1vw;border-radius:15px;border-color:#FCDA68;width: 160px;background-color: #ffffff;padding: 0.2vw;color: #2D2B40;font-family: 'Inter';font-size:12px;" name="Logear" type="button" value="Iniciar sesión">Denunciar post</button></a>
     </div>
 
   </div>
 </div>
-
+<p style="display: none;">[IDPOST]</p>
+<p style="display: none;">[IDUSUARIO]</p>
+<p style="display: none;">[IDPOST]</p>
 <style>
   .tarjeta{
     margin: 5px;
