sistema de denuncia y eliminar post denunciado terminado

--- a/componentes/denuncia.html
+++ b/componentes/denuncia.html
@@ -28,5 +28,6 @@
         <p style="font-weight: bolder;margin-left: -6%;;margin-right: 2%;">Correo denunciado:</p>
         <p >[CORREODENUNCIADO]</p>
     </div>
-    <p><a class="boton" href="revisarPost.php?idpost=[IDPOST]"><button style = "cursor:pointer;border:solid 0.1vw;border-radius:15px;width: 160px;background-color: #FCDA68;padding: 0.1vw;color: #ffffff;font-family: 'Inter';font-size: 10px;font-weight: bolder;" name="Logear" type="button" value="Iniciar sesión">Revisar post</button></a></p>
+    <p><a class="boton" href="revisarPost.php?idpost=[IDPOST]&tipopost=[TIPOPOST]"><button style = "cursor:pointer;border:solid 0.1vw;border-radius:15px;width: 160px;background-color: #FCDA68;padding: 0.1vw;color: #ffffff;font-family: 'Inter';font-size: 10px;font-weight: bolder;" name="Logear" type="button" value="Iniciar sesión">Revisar post</button></a></p>
 </div>
+<p style="display:none">[TIPOPOST]</p>
